Alpine fixes, Add build options for SLIM images

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -6,6 +6,7 @@ LABEL maintainer="alli@allir.org"
 ## GOSU Version to install
 ## The docker group GID from the host, this can be set when it's not 999 on the host
 ENV GOSU_VERSION="1.10" \
+    DOCKER_UID=1000 \
     DOCKER_GID=999 \
     DOCKER_GROUP=docker
 
@@ -24,9 +25,8 @@ RUN set -ex \
 	&& export GNUPGHOME="$(mktemp -d)" \
 	&& gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
 	&& gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
-	&& rm -r "$GNUPGHOME" /usr/local/bin/gosu.asc \
+	&& rm -r /usr/local/bin/gosu.asc \
 	&& chmod +x /usr/local/bin/gosu \
-	&& gosu nobody true; \
     `# Install Docker CE` \
       && apk add docker py-pip && pip install --upgrade pip \
       && pip install docker-compose \
