--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -42,5 +42,6 @@ RUN usermod -aG docker jenkins
 # docker-entrypoint.sh usage: <user> <script> 
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 COPY docker-entrypoint.d/* /etc/docker-entrypoint.d/
-RUN chmod u=rx,go= /usr/local/bin/docker-entrypoint.sh
+RUN chmod u=rx,go= /usr/local/bin/docker-entrypoint.sh \
+    && chmod u=rx,go= /etc/docker-entrypoint.d/*
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh", "jenkins","/sbin/tini","--","/usr/local/bin/jenkins.sh"]
