--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -5,10 +5,10 @@ LABEL maintainer="alli@allir.org"
 # Variables
 ## GOSU Version to install
 ## The docker group GID from the host, this can be set when it's not 999 on the host
-ENV GOSU_VERSION="1.10" \
-    DOCKER_UID=1000 \
-    DOCKER_GID=999 \
-    DOCKER_GROUP=docker
+ENV GOSU_VERSION="1.10"
+ENV DOCKER_UID=1000
+ENV DOCKER_GID=999
+ENV DOCKER_GROUP=docker
 
 # Install GOSU and the latest Docker CE binaries
 USER root
@@ -37,9 +37,10 @@ RUN set -ex \
 # Run jenkins after running docker entrypoint script
 # Everything runs as root (or last USER directive) gosu is then used in the script
 # docker-entrypoint.sh usage: <user> <script> 
-COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-COPY docker-entrypoint.d/* /etc/docker-entrypoint.d/
-RUN chmod u=rx,go= /usr/local/bin/docker-entrypoint.sh \
-    && chmod u=rx,go= /etc/docker-entrypoint.d/*
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh", "sbin/tini","--","/usr/local/bin/jenkins.sh"]
+COPY docker-entrypoint-alpine.sh /docker-entrypoint.sh
+COPY docker-entrypoint.d/* /docker-entrypoint.d/
+RUN chmod u=rx,go= /docker-entrypoint.sh \
+    && chmod u=rx,go= /docker-entrypoint.d/*
+ENTRYPOINT ["/docker-entrypoint.sh"]
+CMD ["gosu","jenkins:docker","tini","--","/usr/local/bin/jenkins.sh"]
 
