--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -13,34 +13,29 @@ ENV DOCKER_GROUP=docker
 # Install GOSU and the latest Docker CE binaries
 USER root
 RUN set -ex \
-    `# Install Dependencies`\
+    # Install Dependencies
       && buildDeps='dpkg gnupg openssl' \
       && apk --no-cache add \
         shadow \
         $buildDeps \
-    `# Install GOSU` \
-	&& dpkgArch="$(dpkg --print-architecture | awk -F- '{ print $NF }')" \
-	&& wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$dpkgArch" \
-	&& wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$dpkgArch.asc" \
-	&& export GNUPGHOME="$(mktemp -d)" \
-	&& gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
-	&& gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
-	&& rm -r /usr/local/bin/gosu.asc \
-	&& chmod +x /usr/local/bin/gosu \
-    `# Install Docker CE` \
+    # Install GOSU
+      && dpkgArch="$(dpkg --print-architecture | awk -F- '{ print $NF }')" \
+      && wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$dpkgArch" \
+      && wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$dpkgArch.asc" \
+      && export GNUPGHOME="$(mktemp -d)" \
+      && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
+      && gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
+      && rm -r /usr/local/bin/gosu.asc \
+      && chmod +x /usr/local/bin/gosu \
+    # Install Docker CE
       && apk add docker py-pip && pip install --upgrade pip \
       && pip install docker-compose \
-    `# Cleanup` \
+    # Cleanup
       && apk del --purge $buildDeps \
       && rm -rf /var/cache/apk/* /tmp/* /var/tmp/* 
 
 # Run jenkins after running docker entrypoint script
-# Everything runs as root (or last USER directive) gosu is then used in the script
-# docker-entrypoint.sh usage: <user> <script> 
-COPY docker-entrypoint-alpine.sh /docker-entrypoint.sh
-COPY docker-entrypoint.d/* /docker-entrypoint.d/
-RUN chmod u=rx,go= /docker-entrypoint.sh \
-    && chmod u=rx,go= /docker-entrypoint.d/*
+# The entrypoint runs as root (or last USER directive) gosu is then used in the script
+COPY docker-entrypoint.sh.alpine /docker-entrypoint.sh
+RUN chmod u=rx,go= /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD ["gosu","jenkins:docker","tini","--","/usr/local/bin/jenkins.sh"]
-
